--- a/package.json
+++ b/package.json
@@ -69,50 +69,48 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0-0",
     "autoprefixer": "^9.8.6",
-    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "^5.0.2",
     "conventional-changelog-cli": "^2.1.0",
-    "cross-env": "^7.0.2",
-    "css-loader": "^4.2.2",
     "eslint": "^7.8.1",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-loader": "^4.0.2",
+    "eslint-plugin-html": "^6.0.3",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-unicorn": "^21.0.0",
     "eslint-plugin-vue": "^6.2.2",
-    "file-loader": "^6.1.0",
+    "glob": "^7.1.6",
     "hard-source-webpack-plugin": "^0.13.1",
     "husky": "^4.2.5",
+    "image-webpack-loader": "^6.0.0",
     "less": "^3.12.2",
     "less-loader": "^7.0.0",
     "lint-staged": "^10.2.13",
+    "mini-css-extract-plugin": "^0.11.0",
     "postcss-flexbugs-fixes": "^4.2.1",
-    "postcss-loader": "^3.0.0",
     "postcss-normalize": "^9.0.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.1.1",
+    "purgecss-webpack-plugin": "^2.3.0",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.1",
-    "style-loader": "^1.2.1",
     "stylelint": "^13.7.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.3.0",
     "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.18.0",
     "typescript": "^4.0.2",
-    "url-loader": "^4.1.0",
-    "vue-loader": "^15.9.3",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpackbar": "^4.0.0"
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.11.2",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0-0"
+    "vue": "^3.0.0-rc.10"
   }
 }
